# python5.1.2

./: db.sqlite3  manage.py  pyproject.toml
app/: models.py  views.py
app/migrations/: 0001_initial.py  0002_remove_image_title.py
app/neuralnnetwork/: __init__.py
app/templates/app/: classes.html  directory.html  home.html
first_project/: settings.py  urls.py
