[tool.poetry]
name = "python5-1-2"
version = "0.1.0"
description = ""
authors = ["Mdryomin <mdryomin@bk.ru>"]
readme = "README.md"
packages = [{include = "python5"}]

[tool.poetry.dependencies]
python = "^3.11"
keras = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
